# newsbytes-api-fastapi

./: pyproject.toml  thunder-collection_newsbytes-api-fastapi.json
newsbytes_api_fastapi/: config.py  crud.py  database.py  main.py  models.py  schemas.py  tasks.py
newsbytes_api_fastapi/auth/: router.py  schemas.py  utils.py
newsbytes_api_fastapi/sources/: __init__.py  router.py  schemas.py
newsbytes_api_fastapi/sources/news_sources/: __init__.py  progscrape.py
