[tool.poetry]
name = "newsbytes-api-fastapi"
version = "0.1.0"
description = ""
authors = ["Hendika N. <hendika.new@gmail.com>"]
readme = "README.md"
packages = [{include = "newsbytes_api_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.22"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.1"
black = "^23.10.1"
ruff = "^0.1.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "uvicorn newsbytes_api_fastapi.main:app --reload"
test = "pytest -s"
lint = "black --check ."
format = "black ."